--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         uses: azure/login@v2
         with:
           client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          tenant-id: 0d8d6b97-e05d-460c-b6b5-19b7d020f47a
           allow-no-subscriptions: true
 
       - name: Log in to Azure Container Registry
