--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Azure Login
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          client-id: d6fb91f3-2d63-4731-85ab-1a3aa373e3e2
           tenant-id: 0d8d6b97-e05d-460c-b6b5-19b7d020f47a
           allow-no-subscriptions: true
 
