--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,8 +10,8 @@ permissions:
   contents: read
 
 env:
-  AZURE_CONTAINER_REGISTRY: "ContenedorWorkspace"
-  IMAGE_NAME: "backend-caa"
+  AZURE_CONTAINER_REGISTRY: ContenedorWorkspace
+  IMAGE_NAME: backend-caa
 
 jobs:
   build-and-deploy:
@@ -30,18 +30,18 @@ jobs:
       - name: Log in to Azure Container Registry
         uses: azure/docker-login@v1
         with:
-          login-server: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io
-          username: ${{ secrets.REGISTRY_USERNAME }}
-          password: ${{ secrets.REGISTRY_PASSWORD }}
+          login-server: ContenedorWorkspace.azurecr.io
+          username: ContenedorWorkspace
+          password: osbX0e6QFShvozOMo/OlFeCWpwUraz/DgKIuiyypzh+ACRDfxj3E
 
       - name: Build and push container image
         run: |
-          docker build -t ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.IMAGE_NAME }}:${{ github.sha }} .
-          docker push ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          docker build -t ContenedorWorkspace.azurecr.io/backend-caa:${{ github.sha }} .
+          docker push ContenedorWorkspace.azurecr.io/backend-caa:${{ github.sha }}
 
       - name: Deploy to Azure Container Apps
         uses: azure/container-apps-deploy-action@v1
         with:
           containerAppName: backend-caa
           resourceGroup: Infraestructura
-          imageToDeploy: ${{ env.AZURE_CONTAINER_REGISTRY }}.azurecr.io/${{ env.IMAGE_NAME }}:${{ github.sha }}
+          imageToDeploy: ContenedorWorkspace.azurecr.io/backend-caa:${{ github.sha }}
