--- a/Pipfile
+++ b/Pipfile
@@ -12,8 +12,9 @@ bson = "*"
 python-dotenv = "*"
 pymongo = "*"
 flask-cors = "*"
+gunicorn = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.9"
+python_version = "3.13"
