--- a/.github/workflows/main_BackendWorkspace.yml
+++ b/.github/workflows/main_BackendWorkspace.yml
@@ -11,42 +11,41 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: 'ubuntu-latest'
 
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v2
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-      - name: Log in to container registry
-        uses: docker/login-action@v2
-        with:
-          registry: https://contenedorcaa.azurecr.io/
-          username: ${{ secrets.AzureAppService_ContainerUsername_a46369a62d7c4d239f78b8987ec00ed4 }}
-          password: ${{ secrets.AzureAppService_ContainerPassword_ecb24b9f824b4fc4a44bc04af7b7ab4d }}
+    - name: Log in to registry
+      uses: docker/login-action@v2
+      with:
+        registry: https://contenedorcaa.azurecr.io/
+        username: ${{ secrets.AzureAppService_ContainerUsername_66a3c14cebd0424c960b90ae3bde7871 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_737d3deb7d794c9e9ad107887ac24cf3 }}
 
-      - name: Build and push container image to registry
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          push: true
-          tags: contenedorcaa.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_a46369a62d7c4d239f78b8987ec00ed4 }}/backend-caa:${{ github.sha }}
-          file: ./Dockerfile
+    - name: Build and push container image to registry
+      uses: docker/build-push-action@v3
+      with:
+        push: true
+        tags: contenedorcaa.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_66a3c14cebd0424c960b90ae3bde7871 }}/backend-caa:${{ github.sha }}
+        file: ./Dockerfile
 
-    deploy:
-      runs-on: ubuntu-latest
-      needs: build
-      environment:
-        name: 'Production'
-        url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    environment:
+      name: 'production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
-      steps:
-        - name: Deploy to Azure Web App
-          id: deploy-to-webapp
-          uses: azure/webapps-deploy@v2
-          with:
-            app-name: 'BackendWorkspace'
-            slot-name: 'Production'
-            publish-profile: ${{ secrets.AzureAppService_PublishProfile_e829ab78447142a4a6b12f1c45ec49a7 }}
-            images: 'contenedorcaa.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_a46369a62d7c4d239f78b8987ec00ed4 }}/backend-caa:${{ github.sha }}'
+    steps:
+    - name: Deploy to Azure Web App
+      id: deploy-to-webapp
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'BackendWorkspace'
+        slot-name: 'production'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_c19c89ed001d44fe8eac6777efb12514 }}
+        images: 'contenedorcaa.azurecr.io/${{ secrets.AzureAppService_ContainerUsername_66a3c14cebd0424c960b90ae3bde7871 }}/backend-caa:${{ github.sha }}'
