--- a/Pipfile
+++ b/Pipfile
@@ -4,15 +4,43 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-flask = "*"
-flask-jwt-extended = "*"
-flask-pymongo = "*"
-flask-bcrypt = "*"
 bson = "*"
-python-dotenv = "*"
-pymongo = "*"
-flask-cors = "*"
-gunicorn = "*"
+bcrypt = "==4.2.1"
+bidict = "==0.23.1"
+blinker = "==1.9.0"
+certifi = "==2025.1.31"
+cffi = "==1.17.1"
+charset-normalizer = "==3.4.1"
+click = "==8.1.7"
+colorama = "==0.4.6"
+cryptography = "==44.0.0"
+dnspython = "==2.7.0"
+flask = "==3.1.0"
+flask-bcrypt = "==1.0.1"
+flask-cors = "==5.0.0"
+flask-jwt-extended = "==4.7.1"
+flask-mail = "==0.10.0"
+flask-pymongo = "==2.3.0"
+gunicorn = "==23.0.0"
+h11 = "==0.14.0"
+idna = "==3.10"
+itsdangerous = "==2.2.0"
+jinja2 = "==3.1.4"
+lxml = "==5.3.1"
+markupsafe = "==3.0.2"
+packaging = "==24.2"
+pycparser = "==2.22"
+pyjwt = "==2.10.1"
+pymongo = "==4.10.1"
+python-dateutil = "==2.9.0.post0"
+python-dotenv = "==1.0.1"
+python-engineio = "==4.11.2"
+requests = "==2.32.3"
+simple-websocket = "==1.1.0"
+six = "==1.16.0"
+urllib3 = "==2.3.0"
+werkzeug = "==3.1.3"
+wsproto = "==1.2.0"
 
 [dev-packages]
 
